[package]
name = "flash-quiz-notification_"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "json", "cookie_store", "cookie_crate", "cookies"]}
scraper = "0.12.0"
lazy_static = "1.4.0"
dotenv="0.15.0"
chrono = "0.4.19"
env_logger = "0.8.3"
log = "0.4.14"
